minor issue with buttons

--- a/UrlShortener_Frontend/src/app/app.component.html
+++ b/UrlShortener_Frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
   <a
     class="snavbar-brand link-underline link-underline-opacity-0"
     style="font-size: 1.8em; vertical-align: middle"
-    routerLink=""
+    routerLink="table"
     >UrlShortener</a
   >
 
@@ -12,7 +12,7 @@
   >
     <a
       aria-current="page"
-      routerLink=""
+      routerLink="table"
       class="hover:green"
       title="Table with short URLs"
     >
